--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alura book</title>
+    <title>Alura books</title>
 </head>
 <body>
-    <h1>Alura book</h1>
+    <h1>Alura books</h1>
 </body>
     <body>
         
