--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
                 <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
             </div>
         </header>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="reset.css">
     </body>
 </html>
