--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         </header>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="reset.css">
-        
+        <a href="#"><img src="img/Favoritos.svg"></a>
+        <a href="#"><img src="img/Compras.svg"></a>
+        <a href="#"><img src="img/Usuario.svg"></a>
     </body>
 </html>
