--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     
 </body>
     <body>
+        y>
         <header class="cabeçalho">
-            <div class="container">
-                <span class="cabeçalho__menu-hamburguer container__imagem"></span>
-                <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
-            </div>
-            <div class="container">
-                <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
-                <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
-                <a href="#"><img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem"></a>
+            <span class="cabeçalho__menu-hamburguer"></span>
+            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+            <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+            <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+        </header>
+    </body>
             </div>
         </header>
         <link rel="stylesheet" href="styles.css">
